@@ -6,9 +6,10 @@
 - Added option to go to stub when viewing stub execution result under request (https://github.com/dukeofharen/httplaceholder/pull/250/files).
 - Updated form body viewer in UI to correctly show request body if the sent body isn't actually a valid form body (https://github.com/dukeofharen/httplaceholder/pull/250/files).
 - Updated "request to stub" handler for form body. When form handler yields no results (e.g. form body is invalid) the handler will not be executed (https://github.com/dukeofharen/httplaceholder/pull/250/files).
+- Updated "update stub" endpoint so an HTTP 404 is returned when the stub ID in the URL does not exist (https://github.com/dukeofharen/httplaceholder/pull/250/files).
 
 # BREAKING CHANGES
--
+- Update stub call now returns HTTP 404 if the stub ID in the URL does not exist. This was HTTP 204 before.
 
 [2022.6.11]
 - Clear form helper filter if form helper is selected (https://github.com/dukeofharen/httplaceholder/pull/248).
